<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColor"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:src="@drawable/app_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/edittext_style">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right|center"
                    android:padding="1.5dp"
                    android:src="@drawable/car_reg_num" />

                <EditText
                    android:id="@+id/ed_car_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/edittext_style"
                    android:ellipsize="start"
                    android:gravity="center"
                    android:hint="@string/login_car_reg_num"
                    android:maxLength="20"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/cursor_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_style">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right|center"
                    android:padding="1.5dp"
                    android:src="@drawable/l_pass" />

                <EditText
                    android:id="@+id/ed_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/edittext_style"
                    android:ellipsize="start"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:hint="@string/login_pass"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textCursorDrawable="@drawable/cursor_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_reg"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_style_black"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/login_reg"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_style_white"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_forget_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"

                android:text="@string/forgot_pass"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>