<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appColor"
        android:orientation="vertical">


        <ImageView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:src="@drawable/app_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_style">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center"
                android:padding="1.5dp"
                android:src="@drawable/car_reg_num" />

            <EditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/reg_name"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textCursorDrawable="@drawable/cursor_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_style">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center"
                android:padding="1.5dp"
                android:src="@drawable/car_reg_num" />

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/reg_email"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textCursorDrawable="@drawable/cursor_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_style">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center"
                android:padding="1.5dp"
                android:src="@drawable/l_pass" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:ellipsize="start"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/reg_pass"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textCursorDrawable="@drawable/cursor_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_style">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center"
                android:padding="1.5dp"
                android:src="@drawable/car_num" />

            <EditText
                android:id="@+id/ed_car_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:ellipsize="start"
                android:gravity="center"
                android:hint="@string/reg_car_num"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textCursorDrawable="@drawable/cursor_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_style">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center"
                android:padding="1.5dp"
                android:src="@drawable/car_model" />

            <EditText
                android:id="@+id/ed_car_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/reg_car_model"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textCursorDrawable="@drawable/cursor_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_style">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center"
                android:padding="1.5dp"
                android:src="@drawable/contact_num" />

            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:ellipsize="start"
                android:ems="10"
                android:maxLength="10"
                android:gravity="center"
                android:hint="@string/reg_contact_num"
                android:inputType="phone"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textCursorDrawable="@drawable/cursor_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_style">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center"
                android:padding="1.5dp"
                android:src="@drawable/manuf_date" />

            <EditText
                android:id="@+id/ed_manf_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/reg_manf_date"
                android:inputType="phone"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textCursorDrawable="@drawable/cursor_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_style">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center"
                android:padding="1.5dp"
                android:src="@drawable/car_type" />

            <EditText
                android:id="@+id/ed_car_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/reg_car_type"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textCursorDrawable="@drawable/cursor_color" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:background="@drawable/edittext_style_black_fill"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>