<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appColor"
        android:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/img_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Edit profile"
                android:textAllCaps="true"
                android:id="@+id/txt_header"
                android:textColor="@color/white"
                android:textSize="16dp" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_noborder"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="80dp"
                    android:background="@null"
                    android:ellipsize="start"
                    android:gravity="center|left"
                    android:hint="@string/reg_name"
                    android:inputType="textPersonName"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/cursor_color" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/black"
                    android:padding="5dp"
                    android:src="@drawable/edit_prof" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_noborder">

                <EditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ellipsize="start"
                   android:singleLine="true"
                    android:gravity="center|left"
                    android:layout_marginRight="80dp"
                    android:layout_centerInParent="true"
                    android:hint="@string/reg_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:textCursorDrawable="@drawable/cursor_color" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/black"
                    android:padding="5dp"
                    android:src="@drawable/edit_prof" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:background="@drawable/edit_text_noborder">

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ellipsize="start"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:hint="@string/reg_pass"
                    android:inputType="textPassword"
                    android:layout_centerInParent="true"
                    android:maxLength="20"
                    android:layout_marginRight="80dp"
                    android:textCursorDrawable="@drawable/cursor_color" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/black"
                    android:padding="5dp"
                    android:src="@drawable/edit_prof" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_noborder">

                <EditText
                    android:id="@+id/ed_car_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="80dp"
                    android:background="@null"
                    android:ellipsize="start"
                    android:gravity="center|left"
                    android:layout_centerInParent="true"
                    android:hint="@string/reg_car_num"
                    android:inputType="text"
                    android:textCursorDrawable="@drawable/cursor_color" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/black"
                    android:padding="5dp"
                    android:src="@drawable/edit_prof" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_noborder">


                <EditText
                    android:id="@+id/ed_car_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="80dp"
                    android:background="@null"
                    android:ellipsize="start"
                    android:ems="10"
                    android:gravity="center|left"
                    android:hint="@string/reg_car_model"
                    android:inputType="text"
                   android:layout_centerInParent="true"
                    android:textCursorDrawable="@drawable/cursor_color" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/black"
                    android:padding="5dp"
                    android:src="@drawable/edit_prof" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_noborder">

                <EditText
                    android:id="@+id/ed_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="80dp"
                    android:background="@null"
                    android:ellipsize="start"
                    android:ems="10"
                    android:maxLength="10"
                    android:gravity="center|left"
                    android:hint="@string/reg_contact_num"
                    android:inputType="phone"
                    android:layout_centerInParent="true"
                    android:textCursorDrawable="@drawable/cursor_color" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/black"
                    android:padding="5dp"
                    android:src="@drawable/edit_prof" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_noborder">

                <EditText
                    android:id="@+id/ed_manf_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="80dp"
                    android:background="@null"
                    android:ellipsize="start"
                    android:ems="10"
                    android:gravity="center|left"
                    android:hint="@string/reg_manf_date"
                    android:inputType="phone"
                    android:layout_centerInParent="true"
                    android:textCursorDrawable="@drawable/cursor_color" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/black"
                    android:padding="5dp"
                    android:src="@drawable/edit_prof" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_noborder">

                <EditText
                    android:id="@+id/ed_car_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="80dp"
                    android:background="@null"
                    android:ellipsize="start"
                    android:ems="10"
                    android:gravity="center|left"
                    android:hint="@string/reg_car_type"
                    android:inputType="text"
                    android:layout_centerInParent="true"
                    android:textCursorDrawable="@drawable/cursor_color" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/black"
                    android:padding="5dp"
                    android:src="@drawable/edit_prof"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="160dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_style_violet_fill"
                android:text="Update"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>